@@ -427,9 +427,12 @@ AC_DEFUN([AX_PROG_BINUTILS],
       unset BFD_LIBSDIR
       unset LIBERTY_LIBSDIR
 
-      if test -r "${binutils_home_dir}/lib${BITS}/libbfd.so" ; then
+      shlibs1=`echo ${binutils_home_dir}/lib${BITS}/libbfd*.so | wc -w`
+      shlibs2=`echo ${binutils_home_dir}/lib/libbfd*.so | wc -w` 
+
+      if test ${shlibs1} -ge 1 ; then
          BFD_LIBSDIR="${binutils_home_dir}/lib${BITS}"
-      elif test -r "${binutils_home_dir}/lib/libbfd.so" ; then
+      elif test ${shlibs2} -ge 1 ; then
          BFD_LIBSDIR="${binutils_home_dir}/lib"
       elif test -r "${binutils_home_dir}/lib${BITS}/libbfd.a" -a "${binutils_require_shared}" = "no" ; then
          BFD_LIBSDIR="${binutils_home_dir}/lib${BITS}"
